// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`at mention suggestion > should display nick name of non signed in user 1`] = `
<div>
  <li
    aria-describedby="test-suggestion-1-description test-suggestion-1-youElement test-suggestion-1-status test-suggestion-1-botTag test-suggestion-1-sharedIcon test-suggestion-1-guestTag test-suggestion-1-groupMembers"
    aria-labelledby="test-suggestion-1-atMention"
    class="suggestion-list__item"
    data-testid="mentionSuggestion_user2"
    id="test-suggestion-1"
    role="option"
    tabindex="-1"
  >
    <span
      class="status-wrapper style--none"
    >
      <span
        class="profile-icon"
      >
        <img
          alt=""
          class="Avatar Avatar-sm"
          loading="lazy"
          src="/api/v4/users/userid2/image?_=0"
        />
      </span>
    </span>
    <span
      class="suggestion-list__ellipsis"
    >
      <span
        class="suggestion-list__main"
        id="test-suggestion-1-atMention"
      >
        @user2
      </span>
      <span
        id="test-suggestion-1-description"
      >
        <span>
          a b (c)
        </span>
      </span>
      <div />
    </span>
  </li>
</div>
`;

exports[`at mention suggestion > should not display nick name of the signed in user 1`] = `
<div>
  <li
    aria-describedby="test-suggestion-1-description test-suggestion-1-youElement test-suggestion-1-status test-suggestion-1-botTag test-suggestion-1-sharedIcon test-suggestion-1-guestTag test-suggestion-1-groupMembers"
    aria-labelledby="test-suggestion-1-atMention"
    class="suggestion-list__item"
    data-testid="mentionSuggestion_user"
    id="test-suggestion-1"
    role="option"
    tabindex="-1"
  >
    <span
      class="status-wrapper style--none"
    >
      <span
        class="profile-icon"
      >
        <img
          alt=""
          class="Avatar Avatar-sm"
          loading="lazy"
          src="/api/v4/users/userid1/image?_=0"
        />
      </span>
    </span>
    <span
      class="suggestion-list__ellipsis"
    >
      <span
        class="suggestion-list__main"
        id="test-suggestion-1-atMention"
      >
        @user
      </span>
      <span
        id="test-suggestion-1-description"
      >
        <span>
          a b
        </span>
      </span>
      <span
        id="test-suggestion-1-youElement"
      >
        (you)
      </span>
      <div />
    </span>
  </li>
</div>
`;
